[gd_scene load_steps=7 format=3 uid="uid://52llhe7trspm"]

[ext_resource type="PackedScene" uid="uid://5k06pa13u2cv" path="res://towers/BaseTower/base_tower.tscn" id="1_u1541"]
[ext_resource type="Script" path="res://towers/CatapultTower/catapult_tower.gd" id="2_34iv6"]
[ext_resource type="Texture2D" uid="uid://8076adjlpd7k" path="res://towers/CatapultTower/catapult_tower.png" id="3_8w06s"]
[ext_resource type="AudioStream" uid="uid://dtgxletpjj0ct" path="res://towers/CatapultTower/swoosh.ogg" id="4_03b4k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x8byb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8w06s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p8f7o"]
radius = 500.0

[node name="CatapultTower" instance=ExtResource("1_u1541")]
script = ExtResource("2_34iv6")
attack_interval = 5.0

[node name="AnimatedSprite2D" parent="Tower" index="0"]
scale = Vector2(0.06, 0.06)
sprite_frames = SubResource("SpriteFrames_x8byb")

[node name="CollisionShape2D" parent="DamageArea" index="0"]
shape = SubResource("CircleShape2D_p8f7o")

[node name="AttackTimer" parent="." index="2"]
wait_time = 5.0

[node name="FirePivot" type="Node2D" parent="." index="3"]
position = Vector2(76, -36)

[node name="SwooshFlyingSFX" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource("4_03b4k")
